tests/NormalTests/paczka1/fuzzy1/97586171.err
Error in line 10: CQQ2iH A782 79,3
Error in line 12: S502 A782 43,0
Error in line 14: YBx7Gjm9 S466 14,4
Error in line 26: sHDcwudXkcc S677 25,5
Error in line 34: sHDcwudXkcc S502 84,7
